--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -1,1 +1,28 @@
-
+.header
+  height: 76px
+  display: flex
+.menu
+  display: flex
+  flex-direction: row
+  align-items: center
+  justify-content: space-between
+  &__logo
+  &__nav
+.logo
+  display: flex
+  flex-direction: column
+  align-items: center
+  &__cat
+.nav
+  display: flex
+  flex-direction: row
+  align-items: center
+  &__item
+    list-style: none
+    font-style: normal
+    font-weight: 600
+    font-size: 16px
+    line-height: 19px
+    margin-left: 30px
+    a
+      text-decoration: none
