--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -8,6 +8,9 @@ html
 body
   font-family: 'Lato', sans-serif
   font-size: 16px
+  color: $black
   width: 100%
   max-width: 100%
   overflow-x: hidden
+a
+  color: $black
