--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -6,13 +6,17 @@
   flex-direction: row
   align-items: center
   justify-content: space-between
-  &__logo
-  &__nav
+.menu-icon
+  display: none    
 .logo
   display: flex
   flex-direction: column
   align-items: center
+  z-index: 20
   &__cat
+    padding-bottom: 3px
+  &__mobile
+    display: none
 .nav
   display: flex
   flex-direction: row
@@ -23,6 +27,6 @@
     font-weight: 600
     font-size: 16px
     line-height: 19px
-    margin-left: 30px
+    margin-left: 26px
     a
       text-decoration: none
