--- a/css/media.css
+++ b/css/media.css
@@ -1,8 +1,8 @@
-@media screen and (min-width: 766px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {
   .container {
     max-width: 678px; } }
 
-@media screen and (min-width: 320px) and (max-width: 765px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
     height: 52px; }
   .logo {
@@ -13,6 +13,10 @@
       margin-left: -1px; }
     .logo__mobile {
       display: block; }
+  .menu__contacts {
+    display: block;
+    margin-left: 13px;
+    margin-top: 16px; }
   .menu-icon {
     z-index: 19;
     position: absolute;
@@ -29,7 +33,7 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    right: 16px; }
+    right: 21px; }
   .menu-icon-line {
     position: absolute;
     width: 24px;
@@ -77,7 +81,7 @@
     transition: top 0.2s linear, -webkit-transform 0.2s ease-in 0.2s;
     transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
     transition: top 0.2s linear, transform 0.2s ease-in 0.2s, -webkit-transform 0.2s ease-in 0.2s; }
-  .menu__nav {
+  .menu__mobile {
     z-index: 9;
     display: block;
     position: absolute;
@@ -89,7 +93,30 @@
     -webkit-transition: -webkit-transform 0.4s ease-in;
     transition: -webkit-transform 0.4s ease-in;
     transition: transform 0.4s ease-in;
-    transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in; }
-  .menu__nav--active {
+    transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in;
+    padding-top: 90px;
+    padding-bottom: 100px; }
+  .menu__mobile--active {
     -webkit-transform: translateY(100%);
-    transform: translateY(100%); } }
+    transform: translateY(100%); }
+  .nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: baseline;
+    -ms-flex-align: baseline;
+    align-items: baseline;
+    margin-left: -12px; }
+    .nav__item {
+      font-family: 'Rubik';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 24px;
+      margin-bottom: 15px;
+      letter-spacing: 0.5px; }
+    .nav__first {
+      display: none; }
+    .nav__second {
+      display: block; } }
