--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,8 +1,8 @@
-@media  screen and (min-width : 766px) and (max-width : 992px)
+@media  screen and (min-width : 768px) and (max-width : 992px)
   .container
     max-width: 678px
 
-@media  screen and (min-width : 320px) and (max-width : 765px)
+@media  screen and (min-width : 320px) and (max-width : 767px)
   .header 
     height: 52px
   .logo
@@ -13,6 +13,11 @@
       margin-left: -1px
     &__mobile
       display: block
+  .menu
+    &__contacts
+      display: block
+      margin-left: 13px
+      margin-top: 16px
   .menu-icon 
     z-index: 19
     position: absolute
@@ -23,7 +28,7 @@
     display: flex
     justify-content: center
     align-items: center
-    right: 16px
+    right: 21px
   .menu-icon-line 
     position: absolute
     width: 24px
@@ -61,7 +66,7 @@
     transform: rotate(-45deg)
     top: 0
     transition: top 0.2s linear, transform 0.2s ease-in 0.2s
-  .menu__nav
+  .menu__mobile
     z-index: 9
     display: block
     position: absolute
@@ -71,5 +76,24 @@
     height: 100vh
     background: #FAC663
     transition: transform 0.4s ease-in
-  .menu__nav--active 
+    padding-top: 90px
+    padding-bottom: 100px
+
+  .menu__mobile--active 
     transform: translateY(100%)
+  .nav
+    flex-direction: column
+    align-items: baseline
+    margin-left: -12px
+    &__item
+      font-family: 'Rubik'
+      font-style: normal
+      font-weight: 500
+      font-size: 20px
+      line-height: 24px
+      margin-bottom: 15px
+      letter-spacing: 0.5px
+    &__first
+      display: none
+    &__second
+      display: block
