--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -6,6 +6,8 @@
   flex-direction: row
   align-items: center
   justify-content: space-between
+  &__contacts
+    display: none
 .menu-icon
   display: none    
 .logo
@@ -30,3 +32,17 @@
     margin-left: 26px
     a
       text-decoration: none
+  &__second
+    display: none
+.contacts
+  &__phone
+    font-family: 'Rubik'
+    font-style: normal
+    font-weight: normal
+    font-size: 16px
+    line-height: 19px
+    text-decoration: none
+  &__social
+    margin-top: 20px
+    img
+      margin-right: 18px
