--- a/sass/media.sass
+++ b/sass/media.sass
@@ -3,8 +3,11 @@
     max-width: 678px
 
 @media  screen and (min-width : 320px) and (max-width : 767px)
+  .container
+    max-width: 678px
   .header 
     height: 52px
+    display: flex
   .logo
     display: none
     &__cat
@@ -14,6 +17,7 @@
     &__mobile
       display: block
   .menu
+    display: flex
     &__contacts
       display: block
       margin-left: 13px
@@ -68,7 +72,9 @@
     transition: top 0.2s linear, transform 0.2s ease-in 0.2s
   .menu__mobile
     z-index: 9
-    display: block
+    display: flex
+    align-items: flex-start
+    flex-direction: column
     position: absolute
     top: -100%
     left: 0
@@ -83,7 +89,7 @@
     transform: translateY(100%)
   .nav
     flex-direction: column
-    align-items: baseline
+    align-items: flex-start
     margin-left: -12px
     &__item
       font-family: 'Rubik'
