--- a/css/media.css
+++ b/css/media.css
@@ -3,8 +3,6 @@
     max-width: 678px; } }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .container {
-    max-width: 678px; }
   .header {
     height: 52px;
     display: -webkit-box;
@@ -17,7 +15,8 @@
       margin-top: 3px;
       margin-left: -1px; }
     .logo__mobile {
-      display: block; }
+      display: block;
+      margin-right: auto; }
   .menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -31,7 +30,6 @@
     position: absolute;
     display: none;
     width: 20px;
-    height: 20px;
     cursor: pointer;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -103,7 +101,7 @@
     -ms-flex-direction: column;
     flex-direction: column;
     position: absolute;
-    top: -100%;
+    top: -200%;
     left: 0;
     width: 100%;
     height: 100vh;
@@ -115,8 +113,8 @@
     padding-top: 90px;
     padding-bottom: 100px; }
   .menu__mobile--active {
-    -webkit-transform: translateY(100%);
-    transform: translateY(100%); }
+    -webkit-transform: translateY(200%);
+    transform: translateY(200%); }
   .nav {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
