--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -15,8 +15,8 @@
   flex-direction: column
   align-items: center
   z-index: 20
+  margin-top: 3px
   &__cat
-    padding-bottom: 3px
   &__mobile
     display: none
 .nav
