--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -17,3 +17,13 @@
   font-style: normal;
   font-display: wrap;
 }
+
+@font-face {
+  font-family: 'Rubik-Bold';
+  src:
+    url('../fonts/Rubik-Bold.woff') format('woff'),
+    url('../fonts/Rubik-Bold.woff2') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: wrap;
+}
