--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,14 +1,23 @@
 .btn
-  padding: 1rem 2.3rem
+  width: 206px
+  height: 50px
+  background: #FFFEFD url(../img/pawBtn.png) no-repeat  center right 7px
+  box-shadow: 0px 5px 25px rgba(26, 33, 47, 0.1)
+  border-radius: 25px
   border: none
-  border-radius: 30px
-  font-size: 1rem
-  font-weight: 500
   box-sizing: border-box
-  text-transform: uppercase
-  border-radius: 35px
-  transition: box-shadow 0.3s
+  transition: all 0.4s ease-in-out
   cursor: pointer
+  display: flex
+  align-items: center
+  justify-content: space-around
+  font-style: normal
+  font-weight: 600
+  font-size: 16px
+  font-family: 'Lato', sans-serif
+  letter-spacing: -0.8px
+  padding-right: 43px
+
   &--primary
     background-color: $black
     color: $light
