--- a/sass/templates/_main.sass
+++ b/sass/templates/_main.sass
@@ -1,34 +1,30 @@
 .main
-  &__fone
-    position: relative
-.fone
-  &__first
-    width: 100%
-  &__second
-    position: absolute
-    top: 0
-    left: 0
-.text
+.content
   display: flex
   flex-direction: column
-  position: absolute
-  top: 0
-  margin-left: 198px
-  margin-top: 225px
+  position: relative
   font-style: normal
-
+  background: url(../img/main.png) no-repeat center/cover
+  max-width: 100%
+  height: 504px
+  padding-left: 198px
+  padding-top: 149px
   &__address
     font-weight: normal
     font-size: 14px
     line-height: 17px
   &__name
-    font-family: 'Rubik'
-    letter-spacing: 2.8px
-    font-weight: bold
+    font-family: 'Rubik-Bold'
     font-size: 62px
+    letter-spacing: -0.3px
   &__hotel
     padding-top: 5px
     font-weight: 500
     font-size: 20px
     letter-spacing: 0.4px
+  &__btn
+    margin-top: 36px
+    &:hover
+      background: #FF7236 url(../img/pawHover.png) no-repeat  center right 7px
+      color: #ffffff
 
