--- a/sass/templates/_main.sass
+++ b/sass/templates/_main.sass
@@ -1,11 +1,10 @@
 .main
+  width: 100%
 .content
   display: flex
   flex-direction: column
-  position: relative
   font-style: normal
   background: url(../img/main.png) no-repeat center/cover
-  max-width: 100%
   height: 504px
   padding-left: 198px
   padding-top: 149px
