--- a/css/media.css
+++ b/css/media.css
@@ -1,10 +1,26 @@
-@media screen and (min-width: 768px) and (max-width: 992px) {
-  .container {
-    max-width: 678px; } }
+@media screen and (min-width: 992px) and (max-width: 1366px) {
+  .content {
+    padding-left: 50px; } }
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .content {
+    text-align: center;
+    padding-top: 136px;
+    padding-left: 0px;
+    background: url(../img/mainTable.png) no-repeat center/cover;
+    height: 868px; }
+    .content__btn {
+      display: block;
+      margin: auto;
+      margin-top: 36px; }
+  .nav__item {
+    margin-left: 29px; }
+  .logo {
+    margin-left: 7px; } }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
-    height: 52px;
+    height: 62px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
@@ -12,7 +28,6 @@
     display: none; }
     .logo__cat {
       padding-bottom: 0px;
-      margin-top: 3px;
       margin-left: -1px; }
     .logo__mobile {
       display: block;
@@ -135,4 +150,21 @@
     .nav__first {
       display: none; }
     .nav__second {
-      display: block; } }
+      display: block; }
+  .content {
+    text-align: center;
+    padding-top: 46px;
+    padding-left: 0px;
+    background: url(../img/mainMobile.png) no-repeat center/cover;
+    height: 457px; }
+    .content__btn {
+      display: block;
+      margin: auto;
+      margin-top: 36px; }
+    .content__address {
+      font-size: 12px; }
+    .content__name {
+      font-size: 44px; }
+    .content__hotel {
+      font-size: 16px;
+      padding-top: 9px; } }
