--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,15 +1,30 @@
-@media  screen and (min-width : 768px) and (max-width : 992px)
-  .container
-    max-width: 678px
+@media  screen and (min-width : 992px) and (max-width : 1366px)
+  .content
+    padding-left: 50px
+@media  screen and (min-width : 768px) and (max-width : 991px)
+  .content
+    text-align: center
+    padding-top: 136px
+    padding-left: 0px
+    background: url(../img/mainTable.png) no-repeat center/cover
+    height: 868px
+    &__btn
+      display: block
+      margin: auto
+      margin-top: 36px
+  .nav
+    &__item
+      margin-left: 29px
+  .logo
+    margin-left: 7px
 @media  screen and (min-width : 320px) and (max-width : 767px)
   .header 
-    height: 52px
+    height: 62px
     display: flex
   .logo
     display: none
     &__cat
       padding-bottom: 0px
-      margin-top: 3px
       margin-left: -1px
     &__mobile
       display: block
@@ -100,3 +115,20 @@
       display: none
     &__second
       display: block
+  .content
+    text-align: center
+    padding-top: 46px
+    padding-left: 0px
+    background: url(../img/mainMobile.png) no-repeat center/cover
+    height: 457px
+    &__btn
+      display: block
+      margin: auto
+      margin-top: 36px
+    &__address
+      font-size: 12px
+    &__name
+      font-size: 44px
+    &__hotel
+      font-size: 16px
+      padding-top: 9px
