--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,13 +1,16 @@
 @media  screen and (min-width : 992px) and (max-width : 1366px)
-  .content
+  .main
     padding-left: 50px
 @media  screen and (min-width : 768px) and (max-width : 991px)
-  .content
+  .main
+    height: 100vh
     text-align: center
     padding-top: 136px
+    padding-bottom: 733px
     padding-left: 0px
-    background: url(../img/mainTable.png) no-repeat center/cover
-    height: 868px
+    background: url(../img/mainTable.png) no-repeat center
+    background-size: 100% 100%
+  .content
     &__btn
       display: block
       margin: auto
@@ -115,12 +118,15 @@
       display: none
     &__second
       display: block
-  .content
+  .main
+    height: 100vh
     text-align: center
     padding-top: 46px
+    padding-bottom: 411px
     padding-left: 0px
-    background: url(../img/mainMobile.png) no-repeat center/cover
-    height: 457px
+    background: url(../img/mainMobile.png) no-repeat center
+    background-size: 100% 100%
+  .content
     &__btn
       display: block
       margin: auto
