--- a/sass/templates/_main.sass
+++ b/sass/templates/_main.sass
@@ -1,13 +1,13 @@
 .main
-  width: 100%
+  background: url(../img/main.png) no-repeat center/cover
+  padding-left: 198px
+  padding-top: 149px
+  padding-bottom: 154px
+  height: 100vh
 .content
   display: flex
   flex-direction: column
   font-style: normal
-  background: url(../img/main.png) no-repeat center/cover
-  height: 504px
-  padding-left: 198px
-  padding-top: 149px
   &__address
     font-weight: normal
     font-size: 14px
