--- a/sass/media.sass
+++ b/sass/media.sass
@@ -124,8 +124,8 @@
     padding-top: 46px
     padding-bottom: 411px
     padding-left: 0px
-    background: url(../img/mainMobile.png) no-repeat center
-    background-size: 100% 100%
+    background: url(../img/mainMobile.png) no-repeat center/cover
+    // background-size: 100% 100%
   .content
     &__btn
       display: block
