--- a/css/media.css
+++ b/css/media.css
@@ -159,8 +159,7 @@
     padding-top: 46px;
     padding-bottom: 411px;
     padding-left: 0px;
-    background: url(../img/mainMobile.png) no-repeat center;
-    background-size: 100% 100%; }
+    background: url(../img/mainMobile.png) no-repeat center/cover; }
   .content__btn {
     display: block;
     margin: auto;
