--- a/css/style.css
+++ b/css/style.css
@@ -699,8 +699,7 @@ input.invalid {
     padding-top: 46px;
     padding-bottom: 411px;
     padding-left: 0px;
-    background: url(../img/mainMobile.png) no-repeat center;
-    background-size: 100% 100%; }
+    background: url(../img/mainMobile.png) no-repeat center/cover; }
   .content__btn {
     display: block;
     margin: auto;
