--- a/css/media.css
+++ b/css/media.css
@@ -9,8 +9,7 @@
     padding-top: 136px;
     padding-bottom: 733px;
     padding-left: 0px;
-    background: url(../img/mainTable.png) no-repeat center;
-    background-size: 100% 100%; }
+    background: url(../img/mainTable.png) no-repeat center/cover; }
   .content__btn {
     display: block;
     margin: auto;
@@ -157,10 +156,10 @@
     height: 100vh;
     text-align: center;
     padding-top: 46px;
-    padding-bottom: 411px;
+    padding-bottom: 100%;
     padding-left: 0px;
-    background: url(../img/mainMobile.png) no-repeat center;
-    background-size: 100% 100%; }
+    background: url(../img/mainMobile.png) no-repeat center center;
+    background-size: cover; }
   .content__btn {
     display: block;
     margin: auto;
