--- a/sass/media.sass
+++ b/sass/media.sass
@@ -8,8 +8,7 @@
     padding-top: 136px
     padding-bottom: 733px
     padding-left: 0px
-    background: url(../img/mainTable.png) no-repeat center
-    background-size: 100% 100%
+    background: url(../img/mainTable.png) no-repeat center/cover
   .content
     &__btn
       display: block
@@ -122,10 +121,10 @@
     height: 100vh
     text-align: center
     padding-top: 46px
-    padding-bottom: 411px
+    padding-bottom: 100%
     padding-left: 0px
-    background: url(../img/mainMobile.png) no-repeat center
-    background-size: 100% 100%
+    background: url(../img/mainMobile.png) no-repeat center center 
+    background-size: cover
   .content
     &__btn
       display: block
