--- a/sass/media.sass
+++ b/sass/media.sass
@@ -9,6 +9,7 @@
     padding-bottom: 733px
     padding-left: 0px
     background: url(../img/mainTable.png) no-repeat center/cover
+    background-position-y: bottom
   .content
     &__btn
       display: block
@@ -123,8 +124,8 @@
     padding-top: 46px
     padding-bottom: 100%
     padding-left: 0px
-    background: url(../img/mainMobile.png) no-repeat center center 
-    background-size: cover
+    background: url(../img/mainMobile.png) no-repeat center/cover 
+    background-position-y: bottom
   .content
     &__btn
       display: block
