--- a/css/style.css
+++ b/css/style.css
@@ -667,8 +667,7 @@ input.invalid {
     transition: -webkit-transform 0.4s ease-in;
     transition: transform 0.4s ease-in;
     transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in;
-    padding-top: 90px;
-    padding-bottom: 100px; }
+    padding-top: 90px; }
   .menu__mobile--active {
     -webkit-transform: translateY(200%);
     transform: translateY(200%); }
