--- a/sass/media.sass
+++ b/sass/media.sass
@@ -97,7 +97,7 @@
     height: 100vh
     background: #FAC663
     transition: transform 0.4s ease-in
-    padding-top: 90px
+    // padding-top: 90px
     // padding-bottom: 100px
 
   .menu__mobile--active 
