--- a/css/style.css
+++ b/css/style.css
@@ -666,8 +666,7 @@ input.invalid {
     -webkit-transition: -webkit-transform 0.4s ease-in;
     transition: -webkit-transform 0.4s ease-in;
     transition: transform 0.4s ease-in;
-    transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in;
-    padding-top: 90px; }
+    transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in; }
   .menu__mobile--active {
     -webkit-transform: translateY(200%);
     transform: translateY(200%); }
