--- a/css/style.css
+++ b/css/style.css
@@ -661,12 +661,14 @@ input.invalid {
     top: -200%;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #FAC663;
     -webkit-transition: -webkit-transform 0.4s ease-in;
     transition: -webkit-transform 0.4s ease-in;
     transition: transform 0.4s ease-in;
-    transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in; }
+    transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in;
+    padding-top: 90px;
+    padding-bottom: 100px; }
   .menu__mobile--active {
     -webkit-transform: translateY(200%);
     transform: translateY(200%); }
