--- a/sass/media.sass
+++ b/sass/media.sass
@@ -91,17 +91,17 @@
     align-items: flex-start
     flex-direction: column
     position: absolute
-    top: -200%
+    top: -100%
     left: 0
     width: 100%
-    height: 1000px
+    height: 100vh
     background: #FAC663
     transition: transform 0.4s ease-in
     padding-top: 90px
     padding-bottom: 100px
 
   .menu__mobile--active 
-    transform: translateY(200%)
+    transform: translateY(100%)
   .nav
     flex-direction: column
     align-items: flex-start
