--- a/sass/media.sass
+++ b/sass/media.sass
@@ -98,7 +98,7 @@
     background: #FAC663
     transition: transform 0.4s ease-in
     padding-top: 90px
-    padding-bottom: 100px
+    // padding-bottom: 100px
 
   .menu__mobile--active 
     transform: translateY(100%)
