--- a/css/media.css
+++ b/css/media.css
@@ -121,7 +121,7 @@
     top: -100%;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #FAC663;
     -webkit-transition: -webkit-transform 0.4s ease-in;
     transition: -webkit-transform 0.4s ease-in;
