--- a/css/style.css
+++ b/css/style.css
@@ -661,7 +661,7 @@ input.invalid {
     top: -100%;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #FAC663;
     -webkit-transition: -webkit-transform 0.4s ease-in;
     transition: -webkit-transform 0.4s ease-in;
