--- a/sass/media.sass
+++ b/sass/media.sass
@@ -94,7 +94,7 @@
     top: -100%
     left: 0
     width: 100%
-    height: 100vh
+    height: 100%
     background: #FAC663
     transition: transform 0.4s ease-in
     padding-top: 90px
